        Class DiscSpec, DiscSetTet, DiscSetTetData, DiscSetSurface,
                DiscSetSurfaceData:
            - Now uses size_t instead of unsigned long for disc indices and
              disc counts.
            - All constructors that take a normal surface will now throw an
              exception if the surface coordinates are too large.
        Class Face<dim, subdim>, FaceNumbering<dim, subdim>, :
            - Major overhaul of the many classes to support face numbering.
              The new structure is simpler thanks to new features of modern
              C++ standards, and several of the old helper classes in
              regina::detail are now gone.
            - New class constant hasNumberingTables to indicate whether lookup
              tables are used for face numbering queries.
        Class FixedArray:
            - Now has a default constructor that creates an empty array.
        Class Flags<T>:
            - Updated to support enumerations with any base C++ integer type,
              not just int.
            - New type alias BaseInt, representing the base C++ integer type.
            - Routines intValue() and fromInt() are deprecated, and replaced
              with the new routines baseValue() and fromBase().
        Class GroupExpressionTerm, GroupExpression, GroupPresentation,
                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
            - GroupPresentation::homologicalAlignment() now throws an
              UnsolvedCase exception if an integer overflow occurs when
              transferring information from an abelian group to a group
              expression.
        Class InfinityBase<...>:
            - Moved into the regina::detail namespace.  This class was never
              intended for end users.